<resources>
    <string name="app_name">ITMS Freight</string>

    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_signup">Join us</string>

    <string name="prompt_fname">First Name</string>
    <string name="prompt_lname">Last Name</string>
    <string name="prompt_contact">Phone No</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm password</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short. Enter minimum 6 characters!</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_phone">This phone number is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_signup">Join Us</string>
    <string name="btn_reset">Reset Password</string>
    <string name="btn_finish">Finish</string>
    <string name="link_reset_password">Forgot your Password?</string>

    <string name="new_account">Get\nStarted</string>
    <string name="reset_password">Reset\nPassword</string>
    <string name="label_step1of4">1/4</string>
    <string name="label_step2of4">2/4</string>
    <string name="label_step3of4">3/4</string>
    <string name="label_step4of4">4/4</string>
    <string name="label_steps">STEPS</string>
    <string name="btn_next">Next</string>

    <string name="nav_home">Home</string>
    <string name="nav_history">History</string>
    <string name="nav_rating">Rating</string>
    <string name="nav_setting">Setting</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ratting">Ratting</string>
    <string name="msg_disabled">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="btn_show_instructions">Show Instructions</string>
    <string name="detaills">Detaills</string>
    <string name="ratingBar">Rating</string>
    <string name="todo">TODO</string>
    <string name="currently_you_don_t_have_a_trip">Currently You Don\'t Have A Trip!</string>
    <string name="topHome">Home</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="profile">Profile</string>
    <string name="action_set_availability">Online</string>
    <string name="tracking_enabled_notif">Tracking is currently enabled. Tap to cancel.</string>
    <string name="prompt_vehicle_no">Vehicle No</string>
    <string name="prompt_vehicle_volume">Vehicle Volume Capacity</string>
    <string name="prompt_truck_weight">Vehicle Weight Capacity</string>
    <string name="prompt_truck_type">Vehicle Type</string>
    <string name="menu_title_setting">Setting</string>
    <string name="google_direction_api">AIzaSyAhgYGsUa7529jFR8yWrnTLjgvyA3T9Xi0</string>

    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="more_details">More Details...</string>
    <string name="directionsApiKey">AIzaSyCd6J1_1vKsKoq7cP5LBBv28TBIZ1EaBwk</string>
    <string name="dotted_line">................................................</string>
    <string name="arrived">Arrived</string>
    <string name="please_wait">Please Wait</string>
    <string name="wait_for_further_instructions">Wait For Further Instructions</string>
    <string name="start_loading">Start Loading</string>
    <string name="proceed_to_loading_bay">Proceed to Loading Bay</string>
    <string name="start_trip">Start Trip</string>
    <string name="unload">Unload</string>
    <string name="btn_dismiss_complete_trip">Go Back To Home</string>
    <string name="trip_complete">Trip Complete!</string>


    <string-array name="truck_types">
        <item>Non A/C</item>
        <item>A/C</item>
    </string-array>

</resources>
